--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -1,42 +1,12 @@
-.App {
-  text-align: center;
-  background-image: url("https://thumbor.forbes.com/thumbor/fit-in/900x510/https://www.forbes.com/advisor/wp-content/uploads/2020/10/paperwork_jpg_yezLKhol.jpg");
-  background-color: #cccccc;
-  height: 865px; /* You must set a specified height */
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .mr-auto {
   padding: 5px;
   justify-content: center;
 }
 
 .text-center {
-  background: linear-gradient(to bottom, white, rgb(102, 202, 197));
+  background: linear-gradient(to right, rgb(245, 202, 202), rgb(243, 232, 135));
   color: black;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Tahoma, sans-serif;
   width: 100%;
   height: 100%;
 }
@@ -44,4 +14,57 @@
 .footer {
   font-weight: bold;
   font-family: monospace;
+}
+.navbar {
+  background-color: DarkCyan;
+  width: 100%;
+  padding: 0.5rem 0.5rem;
+  z-index: 1;
+  margin-bottom: 0.5rem;
+  top: 0;
+  opacity: 0.9;
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: whitesmoke;
+  font-family: monospace;
+}
+
+.container {
+  position: relative;
+  width: 45%;
+  margin-bottom: 20px;
+}
+
+.Styleimg {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.container:hover #image {
+  opacity: 0.9;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #8a2be2;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
 }
